@@ -70,6 +70,16 @@ subprojects {
                 "-Xlint:none",
                 "-nowarn"
         )
+
+//        options.compilerArgs.clear() // remove `--release 8` set in root gradle build
+//        options.compilerArgs.addAll(listOf(
+//                "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+//                "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+//                "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+//                "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+//                "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+//                "--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
+//        ))
     }
 
     dependencies {
